--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Criminology'
 - !lcsh 'Criminal anthropology'
 - !lcc 'HV'
+- GITenberg
 title: The Criminal
 url: http://www.gutenberg.org/ebooks/44500
